--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Practice Project 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>The Great <span id="colorDisplay" >RGB</span> Colour Game</h1> 
+
+    <div>
+        <span id="message"></span>
+    </div>
     
-
-
-
-
-
+    <div class="container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
+   
 
     <script src="script.js"></script>
 </body>
