--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <h1>The Great <span id="colorDisplay" >RGB</span> Colour Game</h1> 
 
-    <div>
+    <div id="stripe">
+        <button id="reset">New Colors</button>
         <span id="message"></span>
+        <button id="easyBtn">EASY</button>
+        <button id="hardBtn" class="selected">HARD</button>
     </div>
     
     <div class="container">
