--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div id="stripe">
         <button id="reset">New Colors</button>
         <span id="message"></span>
-        <button id="easyBtn">EASY</button>
-        <button id="hardBtn" class="selected">HARD</button>
+        <button class="mode">easy</button>
+        <button class="selected mode">hard</button>
     </div>
     
     <div class="container">
